2007-10-16  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3552: Fatal error during backend edit

2007-10-16  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* (minor) Fixed bug #6138: Prevent recursive inclusion of external TypoScript files (patch by Martin Ficzel) - Fixed problems in patch from 2007-10-15

2007-10-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 4183: Incorrect display in htmlArea RTE of utf-8 labels for colors, classes and fonts defined in PageTSConfig
	* Re-inserting accidently deleted comments in class.tx_rtehtmlarea_base.php.

2007-10-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 5855: Missing unlink icon in htmlArea RTE
	* Fixed bug 5839: In htmlArea RTE, paragraph & text dropdown boxes inactive when using @media clause in stylesheet
	* Fixed bug 6152: AllowClipboard helper offered by htmlArea RTE doesn't work with 2.0.0.x Firefox
	* Fixed bug 6340: rtehtmlarea not working with "Editforms on page" option
	* Fixed bug 6152: Nullify default value AllowClipboard helper and use TYPO3-specific Firefox extension
	* Update version number of rtehtmlarea to 1.6.2dev

2007-10-15  Michael Stucki  <michael@typo3.org>

	* (feature) Add new external library "RemoveXSS" for easily filtering potential Cross Site Scripting (XSS) attacks. Can be used by any script. Usage: $filtered_string = t3lib_div::removeXSS($input_string); Thanks to Travis Puderbaugh <kallahar@quickwired.com> for providing this nice piece of code!
	* (minor) Fixed bug #6138: Prevent recursive inclusion of external TypoScript files (patch by Martin Ficzel)
	* (minor) Don't output objects in t3lib_div::debug() - send a plain text info instead

2007-10-13  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 6517: Add icons and grouping to the page type selector

2007-10-09  Benjamin Mack  <mack@xnos.org>

	* (minor) indexed_search - Added info where additional doc. can be found

2007-10-09  Benjamin Mack  <mack@xnos.org>
